# creaminder

./: index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  Layout.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/assets/: test.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs
src-tauri/src/command/: activities.rs  activity_types.rs
src-tauri/src/domain/: activity.rs  activity_type.rs
src-tauri/src/migrations/: 0-init.sql  mod.rs
src/components/: ActivityTypeIcon.tsx  ActivityTypesIcons.tsx  Menu.tsx
src/components/messages/: Alert.tsx  Errors.tsx  Success.tsx
src/lib/: api_call.ts  utils.ts
src/lib/components/: ActivityForm.tsx  ActivityTypeIcon.tsx  ActivityTypesIcons.tsx  Loader.tsx
src/lib/components/messages/: FlashMessages.tsx
src/lib/entities/: Activity.ts  ActivityType.ts
src/routes/: ActivityCreate.tsx  ActivityEdit.tsx  ActivityList.tsx  ActivityTypeCreate.tsx  ActivityTypeEdit.tsx  ActivityTypeList.tsx  Calendar.tsx  Index.tsx
src/stores/: flash_messages.ts
src/styles/: buttons.css  custom.css  global.css  overrides.css
src/translations/: en.json  fr.json
