[package]
name = "creaminder"
version = "0.1.0"
description = "Creaminder, a reminder stats app"
authors = ["Pierstoval"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "creaminder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri deps:
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Project deps:
chrono = { version = "0.4", features = [ "serde" ] }
dirs = "6.0.0"
regex = "1.12"
rusqlite = { version = "0.37", features = [ "bundled-full", "functions", "serde_json" ] }
rusqlite_migration = { version = "2.3", features = [ ] }
serde_rusqlite = { version = "0.40", features = [ ] }
